[package]
name = "chearmyp_node"
version = "0.8.0-dev"
authors = ["Kenneth Trecy Tobias <web.kennethtobias@gmail.com>"]
edition = "2021"

[dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.2.0"

[dependencies.abstract_chearmyp_node]
git = "https://github.com/KennethTrecy/abstract_chearmyp_node"
tag = "v0.3.0"
features = ["vecdeque_node_queue"]

[dev-dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.2.0"
features = ["range_boundary", "vec_boundary_collection"]

[dev-dependencies.abstract_chearmyp_node]
git = "https://github.com/KennethTrecy/abstract_chearmyp_node"
tag = "v0.3.0"
features = ["vecdeque_node_queue", "assertable_node_kind"]

[features]
default = []
no_std = ["abstract_chearmyp_boundary/no_std", "abstract_chearmyp_node/no_std"]
assertable_node = ["abstract_chearmyp_node/assertable_node_kind"]
